exports[`Account Icons AmEx Icon should match snapshot 1`] = `
<div
  className="background--fill display-inline-block geSTCm"
  height={undefined}
  width={undefined} />
`;

exports[`Account Icons Bank Icon should match snapshot 1`] = `
<div
  className="background--fill display-inline-block hTUpnQ"
  height={undefined}
  width={undefined} />
`;

exports[`Account Icons Discover Icon should match snapshot 1`] = `
<div
  className="background--fill display-inline-block jwnrVx"
  height={undefined}
  width={undefined} />
`;

exports[`Account Icons MasterCard Icon should match snapshot 1`] = `
<div
  className="background--fill display-inline-block OVyYV"
  height={undefined}
  width={undefined} />
`;

exports[`Account Icons Visa Icon should match snapshot 1`] = `
<div
  className="background--fill display-inline-block kAaGle"
  height={undefined}
  width={undefined} />
`;
